--- a/style.css
+++ b/style.css
@@ -305,10 +305,11 @@ main hr {
     top: 0;
 }
 
-#elem-container{
+#elem-container {
     /* background-color: red; */
 }
-#fixed-image{
+
+#fixed-image {
     height: 29vw;
     width: 22vw;
     /* background-color: pink; */
@@ -322,8 +323,8 @@ main hr {
     background-position: center;
 }
 
-                        /* loader */
- #loader{
+/* loader */
+#loader {
     width: 100%;
     top: 0;
     height: 100%;
@@ -334,8 +335,9 @@ main hr {
     display: flex;
     align-items: center;
     justify-content: center;
- }      
- #loader h1{
+}
+
+#loader h1 {
     font-size: 4vw;
     color: transparent;
     background: linear-gradient(to right, orange, orangered);
@@ -348,43 +350,52 @@ main hr {
     animation-duration: 1s;
     animation-delay: 1s;
     animation-timing-function: linear;
- }   
- #loader h1:nth-child(2){
+}
+
+#loader h1:nth-child(2) {
     animation-delay: 2s;
- }            
- #loader h1:nth-child(3){
+}
+
+#loader h1:nth-child(3) {
     animation-delay: 3s;
- } 
- #loader h1:nth-child(4){
+}
+
+#loader h1:nth-child(4) {
     animation-delay: 4s;
- } 
- #loader h1:nth-child(5){
+}
+
+#loader h1:nth-child(5) {
     animation-delay: 5s;
- } 
- #loader h1:nth-child(6){
+}
+
+#loader h1:nth-child(6) {
     animation-delay: 6s;
- } 
- @keyframes load{
-    0%{
+}
+
+@keyframes load {
+    0% {
         opacity: 0;
     }
-    10%{
+
+    10% {
         opacity: 1;
     }
-    90%{
+
+    90% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         opacity: 0;
     }
- }
+}
 
 
 
 
 
 
- /* Add this CSS to your portfolio.css file */
+/* Add this CSS to your portfolio.css file */
 
 /* Adjustments for smaller screens */
 @media screen and (max-width: 768px) {
@@ -393,11 +404,11 @@ main hr {
         align-items: center;
         text-align: center;
     }
-    
+
     .right {
         margin-top: 1rem;
     }
-    
+
     .leftsec {
         font-size: 1.5rem;
         margin: 2rem;
@@ -425,15 +436,18 @@ main hr {
     }
 
     #page {
-        display: none; /* Hide horizontal moving text on smaller screens */
+        display: none;
+        /* Hide horizontal moving text on smaller screens */
     }
 
     #vertical {
-        display: none; /* Hide vertical lines on smaller screens */
+        display: none;
+        /* Hide vertical lines on smaller screens */
     }
 
     #secondsec h1 {
-        font-size: 2rem; /* Adjust project section heading font size */
+        font-size: 2rem;
+        /* Adjust project section heading font size */
     }
 }
 
